--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8">
     <title>DailyLog</title>
     <link type="text/css" rel="stylesheet" href="/webjars/bootstrap/3.3.5/css/bootstrap.min.css"/>
+    <link type="text/css" rel="stylesheet" href="main.css"/>
     <script src="/webjars/react/0.13.3/react.min.js"></script>
     <script src="/webjars/react/0.13.3/JSXTransformer.js"></script>
-    <script type="text/jsx" src="main.js"></script>
+
 </head>
 <body>
-index page
+    index page
+    <script type="text/jsx" src="main.js"></script>
 </body>
 </html>
