--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <title>DailyLog</title>
-    <link type="text/css" rel="stylesheet" href="/webjars/bootstrap/3.3.5/css/bootstrap.min.css"/>
+    <link type="text/css" rel="stylesheet" href="webjars/bootstrap/3.3.5/css/bootstrap.min.css"/>
     <link type="text/css" rel="stylesheet" href="main.css"/>
-    <script src="/webjars/react/0.13.3/react.min.js"></script>
-    <script src="/webjars/react/0.13.3/JSXTransformer.js"></script>
+    <script src="webjars/react/0.14.0/react.min.js"></script>
+    <script src="webjars/babel/5.8.29-1/browser.js"></script>
 
 </head>
 <body>
     index page
-    <script type="text/jsx" src="main.js"></script>
+    <script type="text/babel" src="main.js"></script>
 </body>
 </html>
